# libyconfig

./: .gitignore  README.md  meson.build
src/: common.h  yconfig.c  yconfig.h
tests/: check.h  config.tokens  config.yaml  smoketest.c
